Made some changes in the code struture

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,7 @@
             <h1 align='center'>LOGIN</h1>
             <br>
             <ion-item>
-                <ion-input placeholder='Email' [(ngModel)]="username" type="text"></ion-input>
+                <ion-input placeholder='Username' [(ngModel)]="username" type="text"></ion-input>
             </ion-item>
             <br>
             <ion-item>
