added edit profile page and post with image upload option

--- a/src/pages/addpost/pages-addpost.scss
+++ b/src/pages/addpost/pages-addpost.scss
@@ -29,6 +29,13 @@ textarea.text-input {
     align-items: center;
 }
 
+.image {
+    min-width: 50%;
+    min-height: 40%;
+    width: 50%;
+    height: 40%;
+}
+
 .but {
     width: 100%;
     display: flex;
