--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -103,6 +103,13 @@
     font-size: 10px;
 }
 
+.currentdate1 {
+    position: absolute;
+    bottom: 10px;
+    right: 60px;
+    font-size: 10px;
+}
+
 .hand {
     background-image: url('../../assets/hand.gif');
     width: 32px;
