--- a/src/pages/pages-editprofile/pages-editprofile.scss
+++ b/src/pages/pages-editprofile/pages-editprofile.scss
@@ -13,9 +13,57 @@ page-pages-editprofile {
         z-index: 100;
         font-size: 19px;
     }
+    .imgcontent {
+        position: relative;
+    }
     .button {
         display: flex;
         width: 100%;
+        justify-content: center;
+    }
+    .profileimage {
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+    .image {
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+    }
+    .imagepopup {
+        width: 72%;
+        height: 25%;
+        position: absolute;
+        top: 147px;
+        right: 42px;
+        z-index: 1000;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        box-shadow: 10px 11px 17px -3px #888888;
+    }
+    .popupicons {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    .toggleicon {
+        position: absolute;
+        top: 40px;
+        right: 50px;
+        width: 50px;
+        height: 50px;
+        background-color: cornflowerblue;
+        display: flex;
+        border: 2px solid black;
+        border-radius: 50%;
+        justify-content: center;
+        align-items: center;
+    }
+    .popup_icons {
+        display: flex;
         justify-content: center;
     }
 }
