--- a/src/pages/addpost/pages-addpost.scss
+++ b/src/pages/addpost/pages-addpost.scss
@@ -29,11 +29,39 @@ textarea.text-input {
     align-items: center;
 }
 
-.image {
-    min-width: 50%;
-    min-height: 40%;
-    width: 50%;
-    height: 40%;
+.image1 {
+    min-width: 100%;
+    width: 100%;
+    height: auto;
+}
+
+.imagepopup1 {
+    display: flex;
+    flex-direction: column;
+    height: 110px;
+    height: 131px;
+    position: absolute;
+    top: 89px;
+    right: 10px;
+    z-index: 1000;
+    border-radius: 7%;
+    background-color: black;
+    border: 1px solid black;
+}
+
+.imagetoggleicon {
+    font-size: 33px;
+    position: absolute;
+    top: 61px;
+    right: 29px;
+}
+
+.content {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .but {
