--- a/src/pages/pages-personalchatbubble/pages-personalchatbubble.scss
+++ b/src/pages/pages-personalchatbubble/pages-personalchatbubble.scss
@@ -1,35 +1,136 @@
 page-pages-personalchatbubble {
-    .my_user_name {
-        color: white;
+    $userBackgroundColor: #387ef5;
+    $toUserBackgroundColor: #fff;
+    ion-content .scroll-content {
+        background-color: #f5f5f5;
     }
-    .friend_user_name {
-        color: blue;
-    }
-    .message {
-        padding: 10px !important;
-        transition: all 250ms ease-in-out !important;
-        border-radius: 10px !important;
-        margin-bottom: 4px !important;
-    }
-    .my_message {
-        left: 25%;
-        background: color($colors, primary) !important;
-        color: #000 !important;
-    }
-    .send_icon {
-        font-size: 30px;
-        margin-left: 5px;
-    }
-    .other_message {
-        background: #dcdcdc !important;
-        color: #000 !important;
-    }
-    .time {
-        color: #afafaf;
-        float: right;
-        font-size: small;
-    }
-    .message_row {
+    ion-footer {
+        box-shadow: 0 0 4px rgba(0, 0, 0, 0.11);
         background-color: #fff;
+        height: 255px;
+    }
+    .display_pic {
+        position: absolute;
+        border-radius: 50%;
+        width: 45px;
+        height: 45px;
+        bottom: -13px;
+        right: 15px;
+        box-shadow: 0 0 2px rgba(0, 0, 0, 0.36);
+        object-fit: cover;
+    }
+    .line-breaker {
+        white-space: pre-line;
+    }
+    .input-wrap {
+        padding: 5px;
+        display: flex;
+        textarea {
+            flex: 1;
+            border: 0;
+            border-bottom: 1px $userBackgroundColor;
+            border-style: solid;
+        }
+    }
+    .message-wrap {
+        padding: 0 10px;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        .message {
+            position: relative;
+            padding: 7px 0;
+            .user-img {
+                position: absolute;
+                border-radius: 45px;
+                width: 45px;
+                height: 45px;
+                box-shadow: 0 0 2px rgba(0, 0, 0, 0.36);
+                object-fit: cover;
+            }
+            .msg-detail {
+                width: 100%;
+                display: inline-block;
+                p {
+                    margin: 0;
+                }
+                .msg-info {
+                    p {
+                        font-size: .8em;
+                        color: #888;
+                    }
+                }
+                .msg-content {
+                    position: relative;
+                    margin-top: 5px;
+                    border-radius: 5px;
+                    padding: 8px;
+                    border: 1px solid #ddd;
+                    color: #fff;
+                    width: auto;
+                    max-width: 80%;
+                    span.triangle {
+                        background-color: #fff;
+                        border-radius: 2px;
+                        height: 8px;
+                        width: 8px;
+                        top: 12px;
+                        display: block;
+                        border-style: solid;
+                        border-color: #ddd;
+                        border-width: 1px;
+                        -webkit-transform: rotate(45deg);
+                        transform: rotate(45deg);
+                        position: absolute;
+                    }
+                }
+            }
+        }
+        .message.left {
+            .msg-content {
+                background-color: $toUserBackgroundColor;
+                float: left;
+            }
+            .msg-detail {
+                padding-left: 60px;
+            }
+            .user-img {
+                left: 0;
+            }
+            .msg-content {
+                color: #343434;
+                span.triangle {
+                    border-top-width: 0;
+                    border-right-width: 0;
+                    left: -5px;
+                }
+            }
+        }
+        .message.right {
+            .msg-detail {
+                padding-right: 60px;
+                .msg-info {
+                    text-align: right;
+                }
+            }
+            .user-img {
+                right: 0;
+            }
+            ion-spinner {
+                position: absolute;
+                right: 10px;
+                top: 50px;
+            }
+            .msg-content {
+                background-color: $userBackgroundColor;
+                float: right;
+                span.triangle {
+                    background-color: $userBackgroundColor;
+                    border-bottom-width: 0;
+                    border-left-width: 0;
+                    right: -5px;
+                }
+            }
+        }
     }
 }
