--- a/src/pages/pages-viewprofile/pages-viewprofile.scss
+++ b/src/pages/pages-viewprofile/pages-viewprofile.scss
@@ -32,8 +32,9 @@
 }
 
 #profile-description {
-    font-size: 15px;
-    color: #888;
+    font-size: 14px;
+    color: black;
+    margin-left: 8px;
 }
 
 #profile-description a {
@@ -48,6 +49,70 @@
     height: 128px;
     margin: 30px auto 0;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.7);
+}
+
+.side_menu {
+    background: linear-gradient(to top, slateblue 0%, rgb(182, 193, 223) 100%);
+    filter: blur(0.3px);
+}
+
+.personalInfo {
+    padding: 20px;
+    margin: 10px;
+    background: white(59, 57, 57);
+    color: black;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 1.3em;
+    border-radius: 10px;
+    text-shadow: -1px -1px #cfbdbd;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.personalInfo1 {
+    font-size: 20px;
+}
+
+.side_menu_details {
+    width: 100%;
+    height: 200px;
+    background-color: inherit;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 5px 3px 18px #888888;
+}
+
+.sidemenu_text {
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 24px;
+    letter-spacing: 1.8px;
+    color: #000000;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 400;
+    font-style: normal;
+    font-variant: small-caps;
+    text-transform: none;
+}
+
+.sidemenu_logout_icon {
+    background-image: url('../../assets/logout.png');
+    background-size: cover;
+    width: 30px;
+    height: 28px;
+}
+
+.sidemenu_edit_icon {
+    background-image: url('../../assets/edit_icon.png');
+    background-size: cover;
+    width: 30px;
+    height: 29px;
+    ;
 }
 
 .list-item-content {
