--- a/src/pages/pages-editprofile/pages-editprofile.scss
+++ b/src/pages/pages-editprofile/pages-editprofile.scss
@@ -8,7 +8,7 @@ page-pages-editprofile {
     }
     .editico {
         position: absolute;
-        right: 6px;
+        right: 30px;
         top: 10px;
         z-index: 100;
         font-size: 19px;
@@ -76,5 +76,19 @@ page-pages-editprofile {
     .popup_icons {
         display: flex;
         justify-content: center;
+    }
+    .test {
+        background-color: brown;
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        transition: 0.5s;
+    }
+    .input_box {
+        margin: 0 6%;
+        background-color: whitesmoke;
+        color: black;
+        border: 1px black solid;
+        box-shadow: 5px 6px 6px 0px black;
     }
 }
