--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,7 +17,7 @@
             </ion-item>
             <br>
 
-            <button ion-button full (click)='login()'>Login</button>
+            <button ion-button full (click)='login(username,password)'>Login</button>
             <br>
 
             <span style='font-size: 16px;'>Create an account? <span (click)='logintoggle()'><u>Register..</u></span></span>
@@ -47,7 +47,10 @@
                 <ion-input type="text" [(ngModel)]='uname' placeholder="Username" name="username" required></ion-input>
             </ion-item>
             <br>
-
+            <ion-item>
+                <ion-input type="email" [(ngModel)]='mail' placeholder="Email ID" name="email" required></ion-input>
+            </ion-item>
+            <br>
             <ion-item>
                 <ion-input type="password" [(ngModel)]='pass' placeholder="Password" name="password" required></ion-input>
             </ion-item>
@@ -63,7 +66,7 @@
 
             <ion-row>
                 <ion-col class="signup-col">
-                    <button ion-button color='danger' (click)='register()' class="submit-btn" full [disabled]="!(fname && lname && uname && pass && cpass && pass==cpass)">Register</button>
+                    <button ion-button color='danger' (click)='checkuser()' class="submit-btn" full [disabled]="!(fname && lname && uname && pass && mail && cpass && pass==cpass)">Register</button>
                 </ion-col>
             </ion-row>
             <br>
