--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,7 +1,78 @@
-.tabs-md .tab-button {
-    color: blue;
+.tabs .tabbar {
+    background: darkslateblue;
+    width: 100% !important;
+    max-width: 400px !important;
+    margin: 0px 0px 0px 0px !important;
+    max-height: 56px;
+    height: 56px;
+    border-top: 1px solid whitesmoke;
 }
 
-.ionTabs {
-    background-color: slateblue;
+.tabs .tab-button[aria-selected="true"] .tab-button-icon {
+    color: white;
+    -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0);
+}
+
+.tabs .tab-button-icon {
+    color: #f2f2f2;
+    padding-bottom: 3px;
+}
+
+#tab-t0-0:after,
+#tab-t0-1:after,
+#tab-t0-2:after,
+#tab-t0-3:after,
+#tab-t0-4:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 7px;
+    position: absolute;
+    transition: width 0.4s ease 0s, background-color .4s ease;
+    width: 0;
+    margin-bottom: 12px;
+    border-radius: 5px;
+}
+
+#tab-t0-0[aria-selected=true]:after,
+#tab-t0-1[aria-selected=true]:after,
+#tab-t0-2[aria-selected=true]:after,
+#tab-t0-3[aria-selected=true]:after,
+#tab-t0-4[aria-selected=true]:after {
+    width: 24px;
+    background: black;
+}
+
+#tab-t0-0,
+#tab-t0-1,
+#tab-t0-2 {
+    background: darkslateblue;
+    -webkit-box-shadow: 5px 5px 15px -15px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 5px 5px 15px -15px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 15px -15px rgba(0, 0, 0, 0.4);
+}
+
+#tab-t0-0 {
+    border-top-left-radius: 30px;
+}
+
+#tab-t0-2 {
+    border-top-right-radius: 30px;
+    overflow: visible !important;
+}
+
+.badge {
+    background-color: purple;
+}
+
+.footer::before,
+.tabs[tabsPlacement="bottom"]>.tabbar::before {
+    height: 0px !important;
+}
+
+.ion-md-add::before {
+    content: "\f273";
+    margin-top: 1px;
 }
