--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -163,6 +163,7 @@
         border-radius: 5%;
         display: flex;
         padding: 15px;
+        flex-direction: column;
         justify-content: start;
         background-color: white;
         box-shadow: 4px 3px 14px 0px rgba(0, 0, 0, 0.75);
@@ -187,10 +188,6 @@
         width: 32px;
         height: 30px;
         background-size: cover;
-    }
-    
-    .heading {
-        width: 100px;
     }
     
     .linemain {
