--- a/src/pages/pages-personalchatbubble/pages-personalchatbubble.scss
+++ b/src/pages/pages-personalchatbubble/pages-personalchatbubble.scss
@@ -1,5 +1,5 @@
 page-pages-personalchatbubble {
-    $userBackgroundColor: #387ef5;
+    $userBackgroundColor: darkslateblue;
     $toUserBackgroundColor: #fff;
     ion-content .scroll-content {
         background-color: #f5f5f5;
