--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,7 +24,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        box-shadow: 5px 3px 18px #888888;
+        box-shadow: 5px 3px 18px white;
     }
     
     .toolbar-title-md {
