--- a/src/pages/pages-chat/pages-chat.scss
+++ b/src/pages/pages-chat/pages-chat.scss
@@ -26,13 +26,13 @@ page-pages-chat {
     }
     .unreadMessage {
         padding: 10px;
-        width: auto;
-        height: 20px;
+        width: 31px;
+        height: 31px;
         background-color: firebrick;
         position: absolute;
         color: floralwhite;
         left: 59px;
-        font-size: 15px;
+        font-size: 12px;
         align-items: center;
         font-weight: bolder;
         top: 2px;
