--- a/src/pages/pages-editprofile/pages-editprofile.scss
+++ b/src/pages/pages-editprofile/pages-editprofile.scss
@@ -86,9 +86,7 @@ page-pages-editprofile {
     }
     .input_box {
         margin: 0 6%;
-        background-color: whitesmoke;
         color: black;
-        border: 1px black solid;
-        box-shadow: 5px 6px 6px 0px black;
+        border-bottom: 1px solid lightgrey;
     }
 }
