--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,17 +37,23 @@
 .card1 {
     width: 100%;
     height: 20%;
-    padding: 15px 15px;
     background: inherit;
     justify-content: center;
     flex-direction: column;
-    margin-top: 40%;
+    transition: 0.5s;
+}
+
+.image {
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .bannerImage {
     background: url("../../assets/banner_image.png");
     background-size: cover;
     width: 100%;
+    max-width: 250px;
     transition: 0.5s;
 }
 
@@ -80,6 +86,12 @@ ion-item.item {
         color: black;
         font-size: 1.2em;
     }
+}
+
+.remember_me {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .alert-wrapper {
