--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -176,6 +176,12 @@
         font-size: 10px;
     }
     
+    .currentLocation {
+        bottom: 10px;
+        left: 0px;
+        font-size: 10px;
+    }
+    
     .currentdate1 {
         position: absolute;
         bottom: 10px;
